compilateurDeca/src/test/deca/syntax/invalid/sans_objet/print.deca


//Description
//
//Teste syntax invalide
// Historique:
//    cree le 08/01/2026
{
      println(3,);
}